--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		 height="300px"/>
 	<p>5 software program developer profession paths</p>
 	<ul>
-		<li>cloud development</li>
+		<li>Cloud development</li>
 		<li>Desktop development</li>
 		<li>Video Sport development</li>
 		<li>Mobile development</li>
